project(ch01 C)

add_executable(ch01.01-hello-world ch01-01.c)
add_executable(ch01.02-hello-world ch01-02.c)
add_executable(ch01.03-fahrenheight-celsius ch01-03.c)
add_executable(ch01.04-celsius-fahrenheight ch01-04.c)
add_executable(ch01.05-fahrenheight-celsius-revert ch01-05.c)
add_executable(ch01.06-in-to-out ch01-06.c)
